calculate and show tip unformatted

--- a/TIpCalculator/app/src/main/res/layout/activity_main.xml
+++ b/TIpCalculator/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:autofillHints=""
         android:ems="10"
         android:hint="@string/cost_of_service"
         android:inputType="numberDecimal"
         android:minHeight="48dp"
         android:textColorHint="#757575"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/howWasTheService"
